[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "price_forecasting"
version = "0.1.0"
description = "A data science project to demonstrate modeling CAISO energy prices."
authors = [
  { name = "Rob Mohr", email = "rcmohr4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.12"

# Direct runtime dependencies of your Python package
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "properscoring",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
#    "black",
#    "ruff",
#    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/rmohr1/price_forecasting"

[tool.setuptools.packages]
find = { where = ["src"] }

#[tool.black]
#line-length = 88
#
#[tool.ruff]
#line-length = 88
#select = ["E", "W", "F", "I", "B", "C", "N", "D"] # Example linter rules
